--- a/exam_reminder/src/main/resources/application.properties
+++ b/exam_reminder/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/reminderappDB?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=madushanka061@#
+spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql: false
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
