--- a/exam_reminder/src/main/resources/application.properties
+++ b/exam_reminder/src/main/resources/application.properties
@@ -5,3 +5,10 @@ spring.datasource.password=madushanka061@#
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: false
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=s17061@sci.pdn.ac.lk
+spring.mail.password=jczcwcztrkilyefm
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
